--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,75 @@
-h1 {
-  color: blue;
+/**
+ * Common Styles
+ */
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  text-transform: uppercase;
+}
+
+h1 em, h2 em, h3 em, h4 em, h5 em, h6 em,
+.h1 em, .h2 em, .h3 em, .h4 em, .h5 em, .h6 em {
+  color: #da3610;
+  font-style: normal;
+}
+
+h1.section-divider, h2.section-divider, h3.section-divider,
+.h1.section-divider, .h2.section-divider, .h3.section-divider {
+  border-top: 1px solid #dedede;
+  margin-top: 31.5px;
+  margin-bottom: 0;
+}
+
+h1.section-divider > span, h2.section-divider > span, h3.section-divider > span,
+.h1.section-divider > span, .h2.section-divider > span, .h3.section-divider > span {
+  position: relative;
+  top: -0.6em;
+  background-color: #FFF;
+  margin: 0 0 0 0.5em;
+  padding: 0 0.25em;
+}
+
+a {
+  color: #da3610;
+}
+
+a:hover {
+  color: #b22c0d;
+  text-decoration: underline;
+}
+
+/**
+ * Header Styles
+ */
+#navbar-main form > .input-group > .form-control,
+#navbar-main form > .input-group > .input-group-btn,
+#navbar-main form > .input-group > .input-group-btn > button {
+  background-color: #444;
+  border: none;
+  color: #888;
+}
+
+#navbar-main form > .input-group > .form-control {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+#navbar-main form > .input-group > .form-control:focus {
+  box-shadow: none;
+}
+
+#navbar-main ul.navbar-nav {
+  border-right: 1px solid #333;
+}
+
+#navbar-main ul.navbar-nav > li {
+  border-left: 1px solid #333;
+}
+
+#navbar-main ul.navbar-nav > li > a.bg-success:hover {
+  background-color: #2f8912;
+}
+
+#what-is-this {
+    padding-top: 60px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid #dedede;
 }
