--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,6 +1,11 @@
 /**
  * Common Styles
  */
+#body-content {
+  padding-top: 70px;
+  padding-bottom: 30px;
+}
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   text-transform: uppercase;
 }
