Get more of the view video page working
- Move some components that are really just pieces of the view into the views folder tree

--- a/src/css/view-video.css
+++ b/src/css/view-video.css
@@ -128,6 +128,10 @@
   margin-bottom: 1em;
 }
 
+#view-video-tags > a {
+  margin-left: 0.2em;
+}
+
 /* Video date description */
 #view-video-date {
   font-size: 86%;
