--- a/src/css/view-video.css
+++ b/src/css/view-video.css
@@ -10,19 +10,27 @@
   margin-bottom: 2em;
 }
 
-#view-video-details > div:first-child {
-  position: relative;
-  /*height: 238px;
-  overflow: hidden; */
-  padding-right: 15px;    /* Leave room for scrollbar */
-  margin-bottom: 15px;
+#view-video-details {
+  height: 238px;
+}
+
+#view-video-details .gm-scroll-view {
+  padding-right: 15px;  /* Leave room for scrollbar and prevent horizontal scrollbar from appearing */
 }
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-  #view-video-details > div:first-child {
+  #view-video-details {
     height: 304px;
   }
+}
+
+#view-video-details .gm-scrollbar .thumb {
+  background-color: rgba(218, 54, 16, 0.6);
+}
+
+#view-video-details .gm-scrollbar .thumb:hover {
+  background-color: rgba(218, 54, 16, 1);
 }
 
 /* Video ratings when viewing videos */
