--- a/src/css/app.css
+++ b/src/css/app.css
@@ -88,7 +88,7 @@ ul.uimessage > li {
   border-left: 1px solid #333;
 }
 
-#navbar-main ul.navbar-nav > li > a.bg-success:hover {
+#navbar-main ul.navbar-nav > li.bg-success > a:hover {
   background-color: #2f8912;
 }
 
