Start adding the form for adding comments to a video

--- a/src/css/view-video.css
+++ b/src/css/view-video.css
@@ -10,8 +10,9 @@
   margin-bottom: 2em;
 }
 
-#view-video-details {
+#view-video-details .gm-scrollbar-container {
   height: 238px;
+  margin-bottom: 15px;
 }
 
 #view-video-details .gm-scroll-view {
@@ -20,7 +21,7 @@
 
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
-  #view-video-details {
+  #view-video-details .gm-scrollbar-container {
     height: 304px;
   }
 }
