Fix styling and paging on user comments in the account info screen

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -60,6 +60,14 @@ ul.uimessage > li {
     padding: 1em;
 }
 
+.gm-scrollbar .thumb {
+  background-color: rgba(218, 54, 16, 0.6);
+}
+
+.gm-scrollbar .thumb:hover {
+  background-color: rgba(218, 54, 16, 1);
+}
+
 /**
  * Header Styles
  */
