--- a/src/css/chat.css
+++ b/src/css/chat.css
@@ -47,11 +47,68 @@
 .chat-tab-content {
   flex: 1;
   display: none;
-  border: 1px solid #ccc;
+  position: relative;
+  flex-flow: column nowrap;
 }
 
 .chat-tab-content.active {
-  display: block;
+  display: flex;
+}
+
+#chat-messages-window {
+  flex: 1;
+  border-width: 1px 1px 0 1px;
+  border-style: solid;
+  border-color: #ccc;
+  position: relative;
+}
+
+#chat-messages-window > .gm-scrollbar-container {
+  position: absolute;
+}
+
+#chat-messages-list {
+  padding: 15px;
+}
+
+.chat-message {
+  padding-left: 45px;
+}
+
+.chat-message > img {
+  float: left;
+  width: 30px;
+  height: auto;
+  margin-left: -45px;
+}
+
+.chat-message-header {
+  color: #777;
+}
+
+.chat-message-header > small {
+  color: #aaa;
+}
+
+#chat-messages > .form-group {
+  margin-bottom: 0;
+}
+
+#chat-users {
+  border: 1px solid #ccc;
+  position: relative;
+}
+
+#chat-users > .gm-scrollbar-container {
+  position: absolute;
+}
+
+#chat-users-list {
+  padding: 15px;
+}
+
+#chat-users-list > li {
+  margin-bottom: 7px;
 }
 
 /* Small devices (tablets, 768px and up) */
@@ -69,7 +126,7 @@
   }
     
   .chat-tab-content {
-    display: block;
+    display: flex;
   }
   
   #chat-messages {
