Hide the link to chat when chat is not enabled (which it's not by default now)

--- a/src/css/view-video.css
+++ b/src/css/view-video.css
@@ -135,6 +135,10 @@
   margin-left: 0.2em;
 }
 
+#view-video-tags-popover button + button {
+  margin-left: 5px;
+}
+
 /* Video date description */
 #view-video-date {
   font-size: 86%;
