--- a/src/client/css/video-preview-list.css
+++ b/src/client/css/video-preview-list.css
@@ -2,21 +2,12 @@
     Video Preview List and Video Preview
    ------------------------------------------------------------ */
 
-  .fadein {
-    /* opacity: 1; */
-    /* transition: opacity 10s; */
-    animation: mymove 5;
-    /* transition:  transform 2s; */
-    /* -webkit-transition: opacity 10s; */
-    /* transition:  transform 2s, opacity 2.5s; */
-  }
-
   .fade-in {
     opacity: 1;
     animation-name: fadeInOpacity;
     animation-iteration-count: 1;
     animation-timing-function: ease-in;
-    animation-duration: 2s;
+    animation-duration: 1s;
   }
   
   @keyframes fadeInOpacity {
@@ -26,6 +17,10 @@
     100% {
       opacity: 1;
     }
+  }
+
+  .fade-in > h4 {
+    text-align: center;
   }
 
 .video-preview-list {
