--- a/src/client/css/video-preview-list.css
+++ b/src/client/css/video-preview-list.css
@@ -18,16 +18,15 @@
       opacity: 1;
     }
   }
-  .bounce {
+  .blink {
     opacity: 1;
-    animation-name: bounceAnamation;
+    animation-name: bounceAnimation;
     animation-iteration-count: 1;
     animation-timing-function: ease-in;
-    animation-delay: 0.5s;
-    animation-duration: 0.25s;
+    animation-duration: 0.1s;
   }
   
-  @keyframes bounceAnamation {
+  @keyframes bounceAnimation {
     0% {
       background-color: fffff;
       /* opacity: 1; */
@@ -37,7 +36,7 @@
       /* opacity: 0; */
     }
     100% {
-      background-color: fffff;
+      background-color: F5F5F5;
       /* opacity: 0; */
     }
   }
